# Hoardbook

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml
crates/: hb-relay.db
crates/hb-app/: Cargo.toml  tauri.conf.json
crates/hb-app/capabilities/: default.json
crates/hb-app/src/: error.rs  lib.rs  main.rs  relay.rs  store.rs  transfer.rs
crates/hb-app/src/commands/: browse.rs  chat.rs  collection.rs  identity.rs  mod.rs  profile.rs  settings.rs  sharing.rs  update.rs
crates/hb-app/ui/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
crates/hb-app/ui/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
crates/hb-app/ui/.svelte-kit/output/client/.vite/: manifest.json
crates/hb-app/ui/.svelte-kit/output/client/_app/immutable/assets/: 0.DC5fZb5r.css  3.BQl4uMeS.css  4.fbvAc8J1.css  5.CQ6JVWdC.css
crates/hb-app/ui/.svelte-kit/output/client/_app/immutable/chunks/: BxF5bq0o.js  CgfNZePC.js  CvFXJIKx.js
crates/hb-app/ui/.svelte-kit/output/client/_app/immutable/entry/: app.WsG-Riqr.js
crates/hb-app/ui/.svelte-kit/output/client/_app/immutable/nodes/: 0.DuRqFiuH.js  1.Bub8kLhh.js  2.B1H-UBXp.js  3.CAraNRQH.js  4.Bg3hYEWY.js  5.Cp8A4UyL.js  6.CGNeJVce.js
crates/hb-app/ui/.svelte-kit/output/server/: manifest-full.js  manifest.js
crates/hb-app/ui/.svelte-kit/output/server/.vite/: manifest.json
crates/hb-app/ui/.svelte-kit/output/server/chunks/: Avatar.js  CollectionPanel.js  icons.js  internal.js  ssr.js  stores2.js
crates/hb-app/ui/.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
crates/hb-app/ui/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js  4.js  5.js  6.js
crates/hb-app/ui/.svelte-kit/types/: route_meta_data.json
crates/hb-app/ui/.svelte-kit/types/src/routes/: $types.d.ts
crates/hb-app/ui/.svelte-kit/types/src/routes/chat/: $types.d.ts
crates/hb-app/ui/src/: app.css  app.html
crates/hb-app/ui/src/lib/: api.ts  chat-badges.test.ts  contacts-filter.test.ts  icons.ts  stores.ts  types.ts
crates/hb-app/ui/src/lib/components/: Avatar.svelte  CollectionPanel.svelte  DirItem.svelte  ProfileCard.svelte  ScanDialog.svelte  ShareSettingsDialog.svelte
crates/hb-app/ui/src/routes/: +layout.svelte  +page.svelte
crates/hb-app/ui/src/routes/browse/: +page.svelte
crates/hb-app/ui/src/routes/chat/: +page.svelte
crates/hb-app/ui/src/routes/contacts/: +page.svelte
crates/hb-app/ui/src/routes/settings/: +page.svelte
crates/hb-core/: Cargo.toml
crates/hb-core/src/: crypto.rs  envelope.rs  error.rs  jcs.rs  lib.rs  types.rs
crates/hb-relay/: Cargo.toml
crates/hb-relay/src/: db.rs  error.rs  handlers.rs  main.rs  state.rs
docker/: Dockerfile
(+9 files in other folders)
