[workspace]
members = ["crates/hb-core", "crates/hb-relay", "crates/hb-app"]
resolver = "2"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
anyhow      = "1"
chrono      = { version = "0.4", features = ["serde"] }
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
hex         = "0.4"
