[package]
name    = "hb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
chrono     = { workspace = true }
hex        = { workspace = true }

ed25519-dalek     = { version = "2", features = ["rand_core"] }
rand              = "0.8"
sha2              = "0.10"
bs58              = "0.5"
x25519-dalek      = { version = "2", features = ["static_secrets"] }
chacha20poly1305  = "0.10"
hkdf              = "0.12"
base64            = "0.22"

[dev-dependencies]
tokio = { workspace = true }
